<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CaP</string>
    <string name="action_settings">Settings</string>
    <string name="last_post_fetched">0</string>
    <string name="settings_username_text">User name</string>
    <string name="settings_username_key">setting_username</string>
    <string name="settings_update_interval_background_key">setting_update_interval_background</string>
    <string name="settings_update_interval_background_text">Background update interval (minutes)</string>
    <string name="settings_update_interval_key">setting_update_interval</string>
    <string name="settings_update_interval_text">Update interval (seconds)</string>
    <string name="settings_username_default_value">GET A NAME ALREADY!</string>
    <string name="settings_category_general">General</string>
    <string name="settings_category_sync">Synchronization</string>
    <string name="settings_category_notifications">Notifications</string>
    
    
</resources>
